src/test/ui/reserved/reserved-become.stderr
error: expected identifier, found reserved keyword `become`
  --> $DIR/reserved-become.rs:2:9
   |
LL |     let become = 0;
   |         ^^^^^^ expected identifier, found reserved keyword
help: you can escape reserved keywords to use them as identifiers
   |
LL |     let r#become = 0;
   |         ^^^^^^^^

error: aborting due to previous error

